manifests/k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: base64
  name: base64
spec:
  finalizers:
  - kubernetes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: base64-app
  name: base64-app
  namespace: base64
spec:
  replicas: 1
  selector:
    matchLabels:
      app: base64-app
  template:
    metadata:
      labels:
        app: base64-app
    spec:
      containers:
        - image: docker.io/juouyang/base64:1.0.0
          imagePullPolicy: Always
          name: base64
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 10m
              memory: 512Mi
      nodeSelector:
        kubernetes.io/arch: arm64
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: base64-app
  name: base64-app-service
  namespace: base64
spec:
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: base64-app
