manifests/k8s/nginxinc-ingress.yaml
# https://github.com/nginxinc/kubernetes-ingress/issues/21
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: base64-app-ingress
  namespace: base64
  annotations:
    nginx.org/client-max-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
  - host: base64.apps.k8s.<base-domain>
    http:
      paths:
      - backend:
          service:
            name: base64-app-service
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - base64.apps.k8s.<base-domain>
